[FIX] return error

--- a/algo/test.ipynb
+++ b/algo/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -53,16 +53,16 @@
        "      <td>삼성전자</td>\n",
        "      <td>KOSPI</td>\n",
        "      <td></td>\n",
+       "      <td>64500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>400</td>\n",
+       "      <td>0.62</td>\n",
        "      <td>64100</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>64100</td>\n",
-       "      <td>64400</td>\n",
+       "      <td>64600</td>\n",
        "      <td>63900</td>\n",
-       "      <td>4009795</td>\n",
-       "      <td>257182753300</td>\n",
-       "      <td>382663061455000</td>\n",
+       "      <td>8172021</td>\n",
+       "      <td>525279287100</td>\n",
+       "      <td>385050974475000</td>\n",
        "      <td>5969782550</td>\n",
        "      <td>STK</td>\n",
        "    </tr>\n",
@@ -73,16 +73,16 @@
        "      <td>LG에너지솔루션</td>\n",
        "      <td>KOSPI</td>\n",
        "      <td></td>\n",
-       "      <td>540000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-7000</td>\n",
-       "      <td>-1.28</td>\n",
-       "      <td>542000</td>\n",
        "      <td>545000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-2000</td>\n",
+       "      <td>-0.37</td>\n",
+       "      <td>542000</td>\n",
+       "      <td>546000</td>\n",
        "      <td>530000</td>\n",
-       "      <td>126439</td>\n",
-       "      <td>68019528000</td>\n",
-       "      <td>126360000000000</td>\n",
+       "      <td>211398</td>\n",
+       "      <td>114160586000</td>\n",
+       "      <td>127530000000000</td>\n",
        "      <td>234000000</td>\n",
        "      <td>STK</td>\n",
        "    </tr>\n",
@@ -93,16 +93,16 @@
        "      <td>SK하이닉스</td>\n",
        "      <td>KOSPI</td>\n",
        "      <td></td>\n",
-       "      <td>85700</td>\n",
+       "      <td>86400</td>\n",
        "      <td>2</td>\n",
-       "      <td>-1500</td>\n",
-       "      <td>-1.72</td>\n",
+       "      <td>-800</td>\n",
+       "      <td>-0.92</td>\n",
        "      <td>87000</td>\n",
-       "      <td>87000</td>\n",
+       "      <td>87100</td>\n",
        "      <td>85500</td>\n",
-       "      <td>1143381</td>\n",
-       "      <td>98569242800</td>\n",
-       "      <td>62389802680500</td>\n",
+       "      <td>2357794</td>\n",
+       "      <td>203420188900</td>\n",
+       "      <td>62899404336000</td>\n",
        "      <td>728002365</td>\n",
        "      <td>STK</td>\n",
        "    </tr>\n",
@@ -113,16 +113,16 @@
        "      <td>삼성바이오로직스</td>\n",
        "      <td>KOSPI</td>\n",
        "      <td></td>\n",
-       "      <td>781000</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>789000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8000</td>\n",
+       "      <td>1.02</td>\n",
        "      <td>776000</td>\n",
-       "      <td>785000</td>\n",
+       "      <td>790000</td>\n",
        "      <td>776000</td>\n",
-       "      <td>14622</td>\n",
-       "      <td>11401711000</td>\n",
-       "      <td>55586894000000</td>\n",
+       "      <td>39732</td>\n",
+       "      <td>31173731000</td>\n",
+       "      <td>56156286000000</td>\n",
        "      <td>71174000</td>\n",
        "      <td>STK</td>\n",
        "    </tr>\n",
@@ -133,16 +133,16 @@
        "      <td>LG화학</td>\n",
        "      <td>KOSPI</td>\n",
        "      <td></td>\n",
-       "      <td>689000</td>\n",
+       "      <td>691000</td>\n",
        "      <td>1</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>0.15</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.44</td>\n",
        "      <td>685000</td>\n",
-       "      <td>690000</td>\n",
+       "      <td>694000</td>\n",
        "      <td>677000</td>\n",
-       "      <td>94397</td>\n",
-       "      <td>64530723000</td>\n",
-       "      <td>48638124327000</td>\n",
+       "      <td>175241</td>\n",
+       "      <td>120337211000</td>\n",
+       "      <td>48779309013000</td>\n",
        "      <td>70592343</td>\n",
        "      <td>STK</td>\n",
        "    </tr>\n",
@@ -152,28 +152,28 @@
       ],
       "text/plain": [
        "     Code        ISU_CD      Name Market Dept   Close ChangeCode  Changes   \n",
-       "0  005930  KR7005930003      삼성전자  KOSPI        64100          3        0  \\\n",
-       "1  373220  KR7373220003  LG에너지솔루션  KOSPI       540000          2    -7000   \n",
-       "2  000660  KR7000660001    SK하이닉스  KOSPI        85700          2    -1500   \n",
-       "3  207940  KR7207940008  삼성바이오로직스  KOSPI       781000          3        0   \n",
-       "4  051910  KR7051910008      LG화학  KOSPI       689000          1     1000   \n",
+       "0  005930  KR7005930003      삼성전자  KOSPI        64500          1      400  \\\n",
+       "1  373220  KR7373220003  LG에너지솔루션  KOSPI       545000          2    -2000   \n",
+       "2  000660  KR7000660001    SK하이닉스  KOSPI        86400          2     -800   \n",
+       "3  207940  KR7207940008  삼성바이오로직스  KOSPI       789000          1     8000   \n",
+       "4  051910  KR7051910008      LG화학  KOSPI       691000          1     3000   \n",
        "\n",
        "   ChagesRatio    Open    High     Low   Volume        Amount   \n",
-       "0         0.00   64100   64400   63900  4009795  257182753300  \\\n",
-       "1        -1.28  542000  545000  530000   126439   68019528000   \n",
-       "2        -1.72   87000   87000   85500  1143381   98569242800   \n",
-       "3         0.00  776000  785000  776000    14622   11401711000   \n",
-       "4         0.15  685000  690000  677000    94397   64530723000   \n",
+       "0         0.62   64100   64600   63900  8172021  525279287100  \\\n",
+       "1        -0.37  542000  546000  530000   211398  114160586000   \n",
+       "2        -0.92   87000   87100   85500  2357794  203420188900   \n",
+       "3         1.02  776000  790000  776000    39732   31173731000   \n",
+       "4         0.44  685000  694000  677000   175241  120337211000   \n",
        "\n",
        "            Marcap      Stocks MarketId  \n",
-       "0  382663061455000  5969782550      STK  \n",
-       "1  126360000000000   234000000      STK  \n",
-       "2   62389802680500   728002365      STK  \n",
-       "3   55586894000000    71174000      STK  \n",
-       "4   48638124327000    70592343      STK  "
+       "0  385050974475000  5969782550      STK  \n",
+       "1  127530000000000   234000000      STK  \n",
+       "2   62899404336000   728002365      STK  \n",
+       "3   56156286000000    71174000      STK  \n",
+       "4   48779309013000    70592343      STK  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,33 +191,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "stock_list = df_krx[\"Code\"]\n",
-    "corp_nm = \"삼성전자\""
+    "corp_nm = \"현대차\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'005930'"
+       "'005380'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "corp_code = df_krx[df_krx[\"Name\"] == corp_nm][\"Code\"]\n",
-    "corp_code[0]"
+    "corp_code.iloc[0]"
    ]
   },
   {
