--- a/algo/test.ipynb
+++ b/algo/test.ipynb
@@ -3971,7 +3971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -4020,7 +4020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4029,7 +4029,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4    39907450000000\n",
+       "Name: profit, dtype: int64"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corp_finance_data[\"profit\"][-1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -4225,7 +4246,7 @@
        "4  0.29  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
