--- a/algo/test.ipynb
+++ b/algo/test.ipynb
@@ -2,180 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Code</th>\n",
-       "      <th>ISU_CD</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Market</th>\n",
-       "      <th>Dept</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>ChangeCode</th>\n",
-       "      <th>Changes</th>\n",
-       "      <th>ChagesRatio</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>Amount</th>\n",
-       "      <th>Marcap</th>\n",
-       "      <th>Stocks</th>\n",
-       "      <th>MarketId</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>005930</td>\n",
-       "      <td>KR7005930003</td>\n",
-       "      <td>삼성전자</td>\n",
-       "      <td>KOSPI</td>\n",
-       "      <td></td>\n",
-       "      <td>68400</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2200</td>\n",
-       "      <td>3.32</td>\n",
-       "      <td>67800</td>\n",
-       "      <td>68400</td>\n",
-       "      <td>67500</td>\n",
-       "      <td>20349345</td>\n",
-       "      <td>1384558015400</td>\n",
-       "      <td>408333126420000</td>\n",
-       "      <td>5969782550</td>\n",
-       "      <td>STK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>373220</td>\n",
-       "      <td>KR7373220003</td>\n",
-       "      <td>LG에너지솔루션</td>\n",
-       "      <td>KOSPI</td>\n",
-       "      <td></td>\n",
-       "      <td>552000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-10000</td>\n",
-       "      <td>-1.78</td>\n",
-       "      <td>560000</td>\n",
-       "      <td>561000</td>\n",
-       "      <td>552000</td>\n",
-       "      <td>156070</td>\n",
-       "      <td>86426289000</td>\n",
-       "      <td>129168000000000</td>\n",
-       "      <td>234000000</td>\n",
-       "      <td>STK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>000660</td>\n",
-       "      <td>KR7000660001</td>\n",
-       "      <td>SK하이닉스</td>\n",
-       "      <td>KOSPI</td>\n",
-       "      <td></td>\n",
-       "      <td>97300</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3700</td>\n",
-       "      <td>3.95</td>\n",
-       "      <td>95000</td>\n",
-       "      <td>97900</td>\n",
-       "      <td>94900</td>\n",
-       "      <td>5062669</td>\n",
-       "      <td>489879466873</td>\n",
-       "      <td>70834630114500</td>\n",
-       "      <td>728002365</td>\n",
-       "      <td>STK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>207940</td>\n",
-       "      <td>KR7207940008</td>\n",
-       "      <td>삼성바이오로직스</td>\n",
-       "      <td>KOSPI</td>\n",
-       "      <td></td>\n",
-       "      <td>779000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-1000</td>\n",
-       "      <td>-0.13</td>\n",
-       "      <td>777000</td>\n",
-       "      <td>782000</td>\n",
-       "      <td>776000</td>\n",
-       "      <td>34230</td>\n",
-       "      <td>26672138000</td>\n",
-       "      <td>55444546000000</td>\n",
-       "      <td>71174000</td>\n",
-       "      <td>STK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>051910</td>\n",
-       "      <td>KR7051910008</td>\n",
-       "      <td>LG화학</td>\n",
-       "      <td>KOSPI</td>\n",
-       "      <td></td>\n",
-       "      <td>698000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-11000</td>\n",
-       "      <td>-1.55</td>\n",
-       "      <td>710000</td>\n",
-       "      <td>711000</td>\n",
-       "      <td>697000</td>\n",
-       "      <td>161829</td>\n",
-       "      <td>113336385000</td>\n",
-       "      <td>49273455414000</td>\n",
-       "      <td>70592343</td>\n",
-       "      <td>STK</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Code        ISU_CD      Name Market Dept   Close ChangeCode  Changes  \\\n",
-       "0  005930  KR7005930003      삼성전자  KOSPI        68400          1     2200   \n",
-       "1  373220  KR7373220003  LG에너지솔루션  KOSPI       552000          2   -10000   \n",
-       "2  000660  KR7000660001    SK하이닉스  KOSPI        97300          1     3700   \n",
-       "3  207940  KR7207940008  삼성바이오로직스  KOSPI       779000          2    -1000   \n",
-       "4  051910  KR7051910008      LG화학  KOSPI       698000          2   -11000   \n",
-       "\n",
-       "   ChagesRatio    Open    High     Low    Volume         Amount  \\\n",
-       "0         3.32   67800   68400   67500  20349345  1384558015400   \n",
-       "1        -1.78  560000  561000  552000    156070    86426289000   \n",
-       "2         3.95   95000   97900   94900   5062669   489879466873   \n",
-       "3        -0.13  777000  782000  776000     34230    26672138000   \n",
-       "4        -1.55  710000  711000  697000    161829   113336385000   \n",
-       "\n",
-       "            Marcap      Stocks MarketId  \n",
-       "0  408333126420000  5969782550      STK  \n",
-       "1  129168000000000   234000000      STK  \n",
-       "2   70834630114500   728002365      STK  \n",
-       "3   55444546000000    71174000      STK  \n",
-       "4   49273455414000    70592343      STK  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'FinanceDataReader'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mFinanceDataReader\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mfdr\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mplatform\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmplfinance\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mmpf\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'FinanceDataReader'"
+     ]
     }
    ],
    "source": [
@@ -1912,7 +1751,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
